@@ -54,6 +54,8 @@ module Make (S : Strat.T) (Impl : Implementation) = struct
   let unsafe_get ra ix = Impl.unsafe_get ra.ar ix
   let unsafe_set ra ix el = Impl.unsafe_set ra.ar ix el
 
+  let unsafe_expose_array ra = ra.ar
+
   let get ra n =
     if n > ra.vlix or n < 0 then invalid_arg "get" else unsafe_get ra n
 
@@ -96,10 +98,10 @@ module Make (S : Strat.T) (Impl : Implementation) = struct
 
   let init n f = sinit Strategy.default n f
 
-  let to_array ra = Array.init (length ra) (unsafe_get ra)
+  let to_array ra = Array.init (length ra) (fun i -> unsafe_get ra i)
 
   let sof_array strategy ar =
-    sinit strategy (Array.length ar) (Array.unsafe_get ar)
+    sinit strategy (Array.length ar) (fun i -> Array.unsafe_get ar i)
 
   let of_array ar = sof_array Strategy.default ar
 
@@ -112,7 +114,12 @@ module Make (S : Strat.T) (Impl : Implementation) = struct
 
   let enforce_strategy ra =
     let real_len = real_length ra and len = length ra in
-    Strategy.shrink ra.strategy (resizer ra.vlix ra) real_len len
+    (* CR pzimmer: this closure allocation is expensive, because it is created
+       every time we remove one element, but is actually called only when we
+       shrink, that is almost never. We should either do the test in advance
+       or pass in resizer and ra as separate arguments and let shrink do the
+       call. *)
+    Strategy.shrink ra.strategy (fun x -> resizer ra.vlix ra x) real_len len
 
   let set_strategy ra strategy = ra.strategy <- strategy; enforce_strategy ra
   let put_strategy ra strategy = ra.strategy <- strategy
@@ -162,7 +169,7 @@ module Make (S : Strat.T) (Impl : Implementation) = struct
 
   let guarantee_ix ra ix =
     if real_lix ra < ix then
-      Strategy.grow ra.strategy (resizer ra.vlix ra) (succ ix)
+      Strategy.grow ra.strategy (fun x -> resizer ra.vlix ra x) (succ ix)
 
   let maybe_grow_ix ra new_lix = guarantee_ix ra new_lix; ra.vlix <- new_lix
 
